--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "populate-db": "./node_modules/.bin/ts-node ./populate-db.ts"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "firebase": "^5.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -41,7 +43,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
+    "ts-node": "^4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   }
